versioned_docs/version-4/upgrade.mdx
---
title: Upgrade your Stately Studio account
---

# Upgrade

**The Stately Studio will always be free to our Community users** on the [Community plan](/studio-community-plan.mdx), and we will make many future features available on every plan.

We offer a **7-day free trial** on the Stately Studio [Pro](/studio-pro-plan.mdx), [Team](/studio-team-plan.mdx), or [Enterprise](/studio-enterprise-plan.mdx) plans so you can explore how our paid features work for you and your team. You can [upgrade](/upgrade.mdx) when you’re signed into Stately Studio.

## Upgrade to a Pro or Team plan

You can [upgrade](/upgrade.mdx) when you’re signed into the Stately Studio using the **Upgrade** button in the Editor’s header.

<p>
  <ThemedImage
    alt="Upgrade button in the header of the Stately Studio between the Save and share buttons."
    sources={{
      light: '/assets/upgrade/upgrade.png',
      dark: '/assets/upgrade/upgrade-dm.png',
    }}
  />
</p>

## Upgrade to an Enterprise plan

<p>
  <a href="mailto:sales@stately.com?subject=I'm interested in the Stately Studio Enterprise plan">
    Email the Stately team
  </a>{' '}
  for a custom plan tailored to the requirements of your organization.
</p>

## Modify your subscription plan and seats

1. Select your avatar from the header in Stately Studio to open your account menu.
2. Choose **Billing** from the account menu to open your billing options.
3. Use the **Manage subscription** button to open the Stripe checkout.
4. Make any modifications you require.

If you want to modify the number of seats on your plan, change the **Quantity** in the Stripe checkout.

<p>
  <ThemedImage
    alt="Billing option in the user account menu in the Stately Studio header."
    sources={{
      light: '/assets/upgrade/billing.png',
      dark: '/assets/upgrade/billing-dm.png',
    }}
  />
</p>
